force-app/main/default/objects/Exhibition__c/Exhibition__c.object-meta.xml
<CustomObject>
    <label>Exhibition</label>
    <nameField>
        <label>Exhibition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exhibitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>