force-app/main/default/objects/Exhibition__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country in 2-character ISO Code (e.g. CH for Switzerland)</description>
    <inlineHelpText>Country in 2-character ISO Code (e.g. CH for Switzerland)</inlineHelpText>
    <label>Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>