force-app/main/default/objects/Exhibition__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Maker Fair</fullName>
            </value>
            <value>
                <fullName>Press Conference</fullName>
            </value>
            <value>
                <fullName>Roadshow</fullName>
            </value>
            <value>
                <fullName>Exhibition, Conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>