force-app/main/default/objects/Exhibition__c/fields/u_blox_attendance__c.field-meta.xml
<CustomField>
    <fullName>u_blox_attendance__c</fullName>
    <label>u-blox attendance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>