force-app/main/default/objects/Exhibition__c/validationRules/Country_should_follow_ISO_3166_1_Alpha2.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_should_follow_ISO_3166_1_Alpha2</fullName>
    <active>true</active>
    <errorConditionFormula>OR(LEN(Country__c)&lt;&gt;2, Country__c=&quot;UK&quot;)</errorConditionFormula>
    <errorDisplayField>Country__c</errorDisplayField>
    <errorMessage>Country should be in two alphabets (ISO 3166-1 Alpha-2 code, use GB not UK).</errorMessage>
</ValidationRule>